# Video-script-extraction

./: .env.example  .gitignore  README.md  links.txt  pyproject.toml  requirements.txt
src/: config.py  main.py
src/asr/: providers.py  router.py
src/collectors/: douyin_profile.py
src/exporters/: excel_exporter.py  srt_exporter.py  word_exporter.py
src/pipeline/: components.py  models.py  run.py  runner.py
src/pipeline/steps/: asr_dashscope.py  download.py  enrich_llm.py  extract_audio.py  parse_input.py  postprocess.py
src/utils/: ffmpeg.py  file.py  retry.py  text.py
src/web/: app.py
src/web/static/: style.css
src/web/templates/: history.html  index.html  progress.html  result.html
